fix: scroll bar always visible on body.

--- a/src/styles/abstracts/_normalize.scss
+++ b/src/styles/abstracts/_normalize.scss
@@ -21,7 +21,8 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   font-family: work sans, sans-serif;
-  overflow-y: scroll;
+  scroll-behavior: smooth;
+  overflow-y: auto;
   line-height: 1.5;
   font-size: 1rem;
 }
